--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
- See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
 /dist
 /tmp
@@ -26,3 +24,6 @@ testem.log
 
 #System Files
 .DS_Store
+
+app/**/*.js
+app/**/*.map
