--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
-postgres:
-  image: postgres:9.4.5
-  environment:
-    POSTGRES_USER: simplenotebook
-    POSTGRES_PASSWORD: yourpassword
-  ports:
-    - '5432:5432'
-  volumes:
-    - ~/.docker-volumes/mobydock/postgresql/data:/var/lib/postgresql/data
-
-simplenotebook:
-  build: .
-  command: gunicorn -b 0.0.0.0:8000 --reload --access-logfile - "server.app:app"
-  links:
-    - postgres
-  volumes:
-    - .:/simplenotebook
-  ports:
-    - '8000:8000'
+  nginx:
+    image: nginx:1.11.13
+    container_name: "${USER}-nginx"
+    ports:
+      - "80:80"
+    volumes:
+      - ./client:/src
+      - ./config/nginx/simplenotebook_client_nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: always
+  flask:
+    build: .
+    command: gunicorn -b 0.0.0.0:5000 --reload --access-logfile - "server.app:app"
+    links:
+      - nginx
+    volumes:
+      - .:/simplenotebook
+    ports:
+      - '5000:5000'
