--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "A simple notebook",
   "scripts": {
-    "build": "tsc -p client/",
-    "build:watch": "tsc -p client/ -w",
-    "build:e2e": "tsc -p e2e/",
+    "build": "tsc -p .",
+    "build:watch": "tsc -p . -w",
     "serve": "lite-server -c=bs-config.json",
     "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
     "lint": "tslint ./client/**/*.ts -t verbose"
@@ -25,6 +24,7 @@
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^1.6.6",
+    "ng-elastic": "1.0.0-beta.2",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
@@ -35,17 +35,7 @@
     "typescript": "~2.1.0",
     "canonical-path": "0.0.2",
     "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "@types/node": "^6.0.46"
   },
   "repository": {}
 }
