--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,10 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "ng-elastic": "1.0.0-beta.2",
+    "ngx-bootstrap": "^1.6.6"
+
   },
   "devDependencies": {
     "@angular/cli": "1.2.4",
