--- a/sn-server-dotnet/sn-server-dotnet.csproj
+++ b/sn-server-dotnet/sn-server-dotnet.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3"/>
+    <PackageReference Include="Npgsql" Version="3.2.5"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0"/>
