--- a/sn-client/Dockerfile
+++ b/sn-client/Dockerfile
@@ -7,17 +7,29 @@ RUN apt-get update && apt-get install -qq -y curl gnupg
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
 RUN apt-get install  -qq -y nodejs
 
+
 RUN mkdir /src
 
 COPY . /src
 
 WORKDIR /src
 
-RUN ln -sf /usr/bin/nodejs /usr/bin/node
 
 RUN npm install -g npm3
-
-RUN  npm3 install
-
 COPY simplenotebook_client_nginx.conf /etc/nginx/conf.d/default.conf
+
+RUN adduser node
+RUN chown -R node /src
+USER node
+
+RUN mkdir /home/node/.npm-global
+ENV PATH=/home/node/.npm-global/bin:$PATH
+ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
+RUN npm install  @angular/cli
+
+RUN npm3 install
+
+USER root
+RUN rm -rf /src/dist/*
+RUN node_modules/@angular/cli/bin/ng build
 
